Styled the menu so it doesn't jump around all over the place; not perfect, but this is enough to fix #150

--- a/sites/all/themes/zen/planetmath/css/pages.css
+++ b/sites/all/themes/zen/planetmath/css/pages.css
@@ -327,7 +327,8 @@ a:hover{
 }
 
 #navigation{
-  margin-top: -79px;
+  margin-top: -110px;
+  margin-left: 107px;
 }
 
 #navigation li{
